--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     background-color: #FEF5E7;
 }
 
-.main-header {
+#main-content  {
     background-image: url(imgs/Folhas2.jpg);
     background-size: cover;
     background-position: center;
@@ -32,17 +32,19 @@ body {
     }
 }
 
-.main-title {
+
+
+#main-content .main-title {
     font-size: 4rem;
 }
 
-.site-description {
+#main-content .site-description {
     margin-top: 20px;
     text-align: center;
     color: #1e8449;
 }
 
-.site-description p {
+#main-content .site-description p {
     margin-bottom: 10px;
     font-size: 1.2rem;
     line-height: 1.5;
@@ -205,19 +207,38 @@ footer {
 }
 
 #cultivo-form button {
-    background: linear-gradient(180deg, rgb(30, 132, 73) 0%, #2cc26a 100%);
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+    padding: 10px 20px; /* Ajuste o preenchimento conforme necessário */
+   border-radius: 25px; /* Ajuste o raio da borda conforme necessário */
+   cursor: pointer;
+   border: 0;
+   background-color: white;
+   box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+   letter-spacing: 1.5px;
+   text-transform: uppercase;
+   font-size: 12px; /* Ajuste o tamanho da fonte conforme necessário */
+   transition: all 0.5s ease;
+}
+
+#cultivo-form {
+    text-align: center; /* Centraliza o conteúdo dentro do formulário */
 }
 
 #cultivo-form button:hover {
-    background: linear-gradient(180deg, rgb(20, 88, 48) 0%, #239b55 100%);
-    transform: scale(1.05);
+    letter-spacing: 3px;
+    background-color: #1e8449;
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(26, 114, 63) 0px 7px 29px 0px;
 }
+
+#cultivo-form button:active {
+    letter-spacing: 3px;
+    background-color: #13522d;
+    color: hsl(0, 0%, 100%);
+    box-shadow: #0c361e 0px 0px 0px 0px;
+    transform: translateY(10px);
+    transition: 100ms;
+  }
+  
 
 .container {
     background: linear-gradient(180deg, rgba(89, 76, 238, 1) 0%, #8dd0f5 100%);
@@ -277,6 +298,7 @@ footer {
     background: linear-gradient(180deg, rgb(20, 88, 48) 0%, #239b55 100%);
     transform: scale(1.05);
 }
+
 
 #weather-data {
     margin-top: 20px;
@@ -479,14 +501,111 @@ main section {
 }
 
 #login-form {
+    
     display: flex;
     flex-direction: column;
 }
 
-#login-form label,
-#login-form input {
-    margin-bottom: 10px;
-}
+#login-form .form-control {
+    position: relative;
+    margin: 20px 0 40px;
+    width: 190px;
+  }
+  
+  #login-form .form-control input {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px #1e8449 solid;
+    display: block;
+    width: 100%;
+    padding: 15px 0;
+    font-size: 18px;
+    color: #1e8449;
+  }
+  
+/* Input container */
+#cultivo-form .input-container {
+    position: relative;
+    margin: 20px;
+  }
+  
+  /* Input field */
+  #cultivo-form .input-field {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-bottom: 2px solid #ccc;
+    outline: none;
+    background-color: transparent;
+  }
+  
+  /* Input label */
+  #cultivo-form .input-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    color: rgba(204, 204, 204, 0);
+    pointer-events: none;
+    transition: all 0.3s ease;
+  }
+  
+  /* Input highlight */
+  #cultivo-form .input-highlight {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 0;
+    background-color: #1e8449;
+    transition: all 0.3s ease;
+  }
+  
+  /* Input field:focus styles */
+  #cultivo-form .input-field:focus + .input-label {
+    top: -20px;
+    font-size: 12px;
+    color: #1e8449;
+  }
+  
+  #cultivo-form .input-field:focus + .input-label + .input-highlight {
+    width: 100%;
+  }
+  
+  /* Valid input styles */
+  #cultivo-form .input-field:valid + .input-label {
+    top: -20px;
+    font-size: 12px;
+    color: #1e8449;
+  }
+  
+  #cultivo-form .input-field:valid + .input-label + .input-highlight {
+    width: 100%;
+  }
+  
+  
+  #login-form .form-control label {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    pointer-events: none;
+  }
+  
+  #login-form .form-control label span {
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+    color: #1e8449(0, 0, 0);
+    transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  
+ #login-form .form-control input:focus+label span,
+ #login-form  .form-control input:valid+label span {
+    color: #1e8449;
+    transform: translateY(-30px);
+  }
 
 #login-form button {
     background-color: #1e8449;
@@ -637,4 +756,79 @@ main section {
     list-style-type: disc;
     margin: 10px 0;
     padding-left: 20px;
+}
+
+/* Estilos para desativar o scroll */
+.no-scroll {
+    overflow: hidden;
+}
+
+/* Estilos para a animação de inicialização */
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f9f9f9; /* Cor de fundo */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1; /* Inicialmente opaco */
+    transition: opacity 1s ease-out; /* Transição para desaparecer */
+}
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #ddd;
+    border-top: 5px solid #4CAF50; /* Cor do círculo */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loading-text {
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: #4CAF50; /* Cor do texto */
+    display: flex;
+    align-items: center;
+}
+
+.loading-text span {
+    display: inline-block;
+    animation: jump 1s infinite;
+}
+
+.loading-text .dot1, .loading-text .dot2, .loading-text .dot3 {
+    animation: blink 1s infinite step-start both;
+}
+
+.loading-text .dot1 {
+    animation-delay: 0s;
+}
+
+.loading-text .dot2 {
+    animation-delay: 0.2s;
+}
+
+.loading-text .dot3 {
+    animation-delay: 0.4s;
+}
+
+@keyframes blink {
+    0%, 100% { opacity: 0; }
+    50% { opacity: 1; }
+}
+
+@keyframes jump {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-10px); }
 }
