--- a/style.css
+++ b/style.css
@@ -1643,3 +1643,14 @@ main section {
         font-size: 12px;
     }
 }
+
+
+/* Adicione isso ao seu arquivo CSS */
+.fade-in {
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
