--- a/style.css
+++ b/style.css
@@ -727,10 +727,24 @@ main section {
 }
 
 #logged-in-user {
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     font-weight: bold;
     color: #021a12;
     text-transform: uppercase;
+}
+
+/* Estilo para telas menores que 768px (típico para tablets) */
+@media (max-width: 768px) {
+    #logged-in-user {
+        font-size: 0.9rem;
+    }
+}
+
+/* Estilo para telas menores que 480px (típico para celulares) */
+@media (max-width: 480px) {
+    #logged-in-user {
+        font-size: 0.8rem;
+    }
 }
 
 /* Input container */
