--- a/style.css
+++ b/style.css
@@ -2091,6 +2091,16 @@ main section {
     100% { opacity: 1; }
 }
 
+        #noticias-eventos .item {
+            opacity: 0;
+            transform: translateY(50px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+        
+        #noticias-eventos .item.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
         #noticias-eventos {
             display: flex;
             flex-direction: row;
@@ -2212,3 +2222,190 @@ main section {
                 margin-top: 10px; /* Aumentando o espaçamento entre o h2 e o p */
             }
         }
+
+                            
+        #empreendedorismo-rural {
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        
+        #titulo-empreendedorismo-rural {
+            color: #1e8449;
+        }
+        
+        #introducao {
+            line-height: 1.6;
+            color: #666;
+            margin-bottom: 15px;
+        }
+        
+        .historia {
+            margin-bottom: 20px;
+        }
+        
+        .historia h3 {
+            color: #1e8449;
+        }
+        
+        .historia p {
+            line-height: 1.6;
+            color: #666;
+            margin-bottom: 15px;
+        }
+        
+        .historia button {
+            padding: 10px 20px;
+            border-radius: 25px;
+            cursor: pointer;
+            border: 0;
+            background-color: white;
+            box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+            font-size: 12px;
+            transition: all 0.5s ease;
+        }
+        
+        .historia button:hover {
+            letter-spacing: 3px;
+            background-color: #1e8449;
+            color: hsl(0, 0%, 100%);
+            box-shadow: rgb(26, 114, 63) 0px 7px 29px 0px;
+        }
+        
+        .historia button:active {
+            letter-spacing: 3px;
+            background-color: #13522d;
+            color: hsl(0, 0%, 100%);
+            box-shadow: #0c361e 0px 0px 0px 0px;
+            transform: translateY(10px);
+            transition: 100ms;
+        }
+        
+        .detalhes-historia {
+            display: none;
+            background-color: #e8f5e9;
+            padding: 10px;
+            border-left: 4px solid #1e8449;
+            border-radius: 4px;
+        }
+        
+        .historia p:first-letter {
+            font-size: 1.5em;
+            color: #333;
+            font-weight: bold;
+        }
+        
+        .historia p:hover {
+            background-color: #f9f9f9;
+            border-left: 4px solid #1e8449;
+            padding-left: 16px;
+            transition: background-color 0.3s, border-left 0.3s, padding-left 0.3s;
+        }
+        
+        .historia .hide {
+            display: none;
+        }
+        
+        #oportunidades-campo-cidade {
+            padding: 20px;
+            margin-bottom: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        
+        #titulo-oportunidades-campo-cidade {
+            color: #1e8449;
+        }
+        
+        #introducao-oportunidades {
+            line-height: 1.6;
+            color: #666;
+            margin-bottom: 15px;
+        }
+        
+        .oportunidade {
+            margin-bottom: 20px;
+        }
+        
+        .oportunidade h3 {
+            color: #1e8449;
+        }
+        
+        .oportunidade p {
+            line-height: 1.6;
+            color: #666;
+            margin-bottom: 15px;
+        }
+        
+        .oportunidade button {
+            padding: 10px 20px;
+            border-radius: 25px;
+            cursor: pointer;
+            border: 0;
+            background-color: white;
+            box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+            font-size: 12px;
+            transition: all 0.5s ease;
+        }
+        
+        .oportunidade button:hover {
+            letter-spacing: 3px;
+            background-color: #1e8449;
+            color: hsl(0, 0%, 100%);
+            box-shadow: rgb(26, 114, 63) 0px 7px 29px 0px;
+        }
+        
+        .oportunidade button:active {
+            letter-spacing: 3px;
+            background-color: #13522d;
+            color: hsl(0, 0%, 100%);
+            box-shadow: #0c361e 0px 0px 0px 0px;
+            transform: translateY(10px);
+            transition: 100ms;
+        }
+        
+        .detalhes-oportunidade {
+            display: none;
+            background-color: #e8f5e9;
+            padding: 10px;
+            border-left: 4px solid #1e8449;
+            border-radius: 4px;
+        }
+        
+        .oportunidade p:first-letter {
+            font-size: 1.5em;
+            color: #333;
+            font-weight: bold;
+        }
+        
+        .oportunidade p:hover {
+            background-color: #f9f9f9;
+            border-left: 4px solid #1e8449;
+            padding-left: 16px;
+            transition: background-color 0.3s, border-left 0.3s, padding-left 0.3s;
+        }
+        
+
+         /* Estilo para a seção do vídeo */
+.video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto; /* Ajusta a altura automaticamente */
+    margin-top: 20px; /* Espaço acima da seção, ajuste conforme necessário */
+    margin-bottom: 20px; /* Espaço abaixo da seção, ajuste conforme necessário */
+}
+
+/* Estilo para o vídeo */
+video {
+    width: 100%;
+    max-width: 600px; /* Largura máxima do vídeo */
+    height: auto; /* Mantém a proporção do vídeo */
+}
