--- a/style.css
+++ b/style.css
@@ -2409,3 +2409,17 @@ video {
     max-width: 600px; /* Largura máxima do vídeo */
     height: auto; /* Mantém a proporção do vídeo */
 }
+
+
+
+/* CSS para animação */
+.item {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
